# Deckbuilder

./: .cursorrules  .env.example  .gitignore  README.md  TASK.md  e2e_proof_ar_positive_result.json  e2e_proof_en_negative_result.json  e2e_proof_en_positive_result.json  export_pngs.py  pyproject.toml  requirements.txt  source_book_only_ar_result.json  source_book_only_en_result.json  source_book_v2_output.txt  source_book_v3_output.txt
.claude/: settings.local.json
_validation_transfer/: manifest.json  sb-validation-input.tar.gz.sha256
backend/: __init__.py  server.py
docs/: DeckForge-Project-Scaffold-v1.0.md  DeckForge-Prompt-Library-v1.4.md  DeckForge-State-Schema-v1.1.md  DeckForge-v3.1-Final-Architecture.md  s2_support_email_draft.txt
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
output/: pytest_full_suite_proof.txt  source_book_3issues_final.txt  source_book_6ISSUES_PROOF.txt  source_book_FINAL2_PROOF.txt  source_book_FINAL_METRICS.txt  source_book_FINAL_PROOF.txt  source_book_ISSUE4_PROOF.txt  source_book_NOHUP_PROOF.txt  source_book_S2_COMPLETE.txt  source_book_S2_REWRITE.txt  source_book_TASK5_PROOF.txt  source_book_TRUTH_PROOF.txt  source_book_elite_final.txt  source_book_elite_v4.txt  source_book_final_10fixes.txt  source_book_final_fixed.txt  source_book_final_v2.txt  source_book_routing_v1.txt  source_book_v6_final.txt  source_book_v8_verify.txt
scripts/: e2e_iterative_test.py  e2e_proof.py  e2e_real_test.py  export_pngs.py  inspect_template.py  run_pipeline.py  (+6 more)
(+535 files in other folders)
